--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <!-- 🔐 Cabeçalhos de Segurança -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src * data: blob:; script-src 'self' https://unpkg.com; connect-src 'self'; frame-ancestors 'none';">
+  <meta http-equiv="Referrer-Policy" content="no-referrer">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=(), usb=(), payment=(), fullscreen=*">
+
   <title>STUDIO ECOCRIATIVO | Links Oficiais</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest"></script>
+
   <style>
     :root {
       --roxo: #6c4ab6;
@@ -130,27 +139,27 @@
     <h1>STUDIO <span>ECOCRIATIVO</span></h1>
     <p class="subtitle">Links Oficiais • Design com Propósito</p>
 
-    <a href="https://wa.me/5512996500827?text=Ol%C3%A1%2C%20quero%20um%20or%C3%A7amento!" class="link-btn" target="_blank">
+    <a href="https://wa.me/5512996500827?text=Ol%C3%A1%2C%20quero%20um%20or%C3%A7amento!" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="message-circle"></i> WhatsApp - Orçamento
     </a>
 
-    <a href="https://www.instagram.com/studioecocriativo" class="link-btn" target="_blank">
+    <a href="https://www.instagram.com/studioecocriativo" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="instagram"></i> Portfólio no Instagram
     </a>
 
-    <a href="#" class="link-btn" target="_blank">
+    <a href="#" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="palette"></i> Projetos no Behance
     </a>
 
-    <a href="mailto:contato@ecocriativo.com" class="link-btn" target="_blank">
+    <a href="mailto:contato@ecocriativo.com" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="mail"></i> Enviar E-mail
     </a>
 
-    <a href="https://drive.google.com/file/d/1Y7FCE5ZuRSnfPckvYOFIc2-K6-tAdaMy/view?usp=sharing" class="link-btn" target="_blank">
+    <a href="https://drive.google.com/file/d/1Y7FCE5ZuRSnfPckvYOFIc2-K6-tAdaMy/view?usp=sharing" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="file-text"></i> Baixar Catálogo de Serviços
     </a>
 
-    <a href="https://beamish-cendol-486ce6.netlify.app" class="link-btn" target="_blank">
+    <a href="https://beamish-cendol-486ce6.netlify.app" class="link-btn" target="_blank" rel="noopener noreferrer">
       <i data-lucide="globe"></i> Acessar Site Completo
     </a>
 
