--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <title>STUDIO ECOCRIATIVO | Links Oficiais</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://i.postimg.cc/C1xjrHD5/logo.png" type="image/png" />
   <script src="https://unpkg.com/lucide@latest"></script>
 
   <style>
