--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <h1>STUDIO <span>ECOCRIATIVO</span></h1>
     <p class="subtitle">Links Oficiais • Design com Propósito</p>
 
-    <a href="https://wa.me/5512996500827?text=Ol%C3%A1%2C%20quero%20um%20or%C3%A7amento!" class="link-btn" target="_blank" rel="noopener noreferrer">
-      <i data-lucide="message-circle"></i> WhatsApp - Orçamento
+    <a href="https://studioecocriativo.github.io/briefing/" class="link-btn" target="_blank" rel="noopener noreferrer">
+      <i data-lucide="message-circle"></i> Briefing - Orçamento
     </a>
 
     <a href="https://www.instagram.com/studioecocriativo" class="link-btn" target="_blank" rel="noopener noreferrer">
